# Simple-Line-Parser

./: CMakeLists.txt  LICENSE  README  README.md  demo.cpp
data/: data.txt
include/: any.h  boolean.h  convert.h  list.h  list.hpp  parser.h  var.h
src/: boolean.cpp  convert.cpp  parser.cpp  var.cpp
ut/: test_any.cpp  test_boolean.cpp  test_list.cpp  test_parser.cpp  test_var_float.cpp  test_var_int.cpp  test_var_string.cpp
